--- a/impact.html
+++ b/impact.html
@@ -20,23 +20,28 @@
     <link rel="icon" type="image/jpeg" sizes="192x192" href="assets/img/android_homescreen.jpg">
     <link rel="icon" type="image/jpeg" sizes="512x512" href="assets/img/splashscreen.jpg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
     <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="assets/css/animate.min.min.css">
 <script src="https://cdn.counter.dev/script.js" data-id="b5fa2081-bcb3-4ea6-bfd1-67fd41080622" data-utcoffset="-7"></script>
 </head>
 
 <body style="font-family: Quicksand, sans-serif;" onload="disableselect()">
     <!-- Start: Navbar Right Links (Dark) -->
-    <nav class="navbar navbar-expand-md sticky-top bg-dark py-3 navbar-dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+    <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" style="background: #DBF226;">
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_b.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5" style="border-color: #000;color: #000;"><span class="visually-hidden">Toggle navigation</span><span><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-menu">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <path d="M4 8l16 0"></path>
+                        <path d="M4 16l16 0"></path>
+                    </svg></span></button>
             <div class="collapse navbar-collapse text-end" id="navcol-5" style="font-size: 18px;">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" data-bss-hover-animate="pulse" href="index.html" style="color: #fff;">Home</a></li>
-                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" href="#" style="color: #fff;">Projects</a>
+                    <li class="nav-item"><a class="nav-link" data-bss-hover-animate="pulse" href="index.html" style="color: #000;">Home</a></li>
+                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" href="#" style="color: #000;">Projects</a>
                         <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="https://courses.wavedm.net" target="_blank">Courses</a><a class="dropdown-item" href="ministryconnect.html">MinistryConnect</a><a class="dropdown-item" href="https://act.wavedm.net" target="_blank">Act</a><a class="dropdown-item" href="webdesign.html">Web Design</a></div>
                     </li>
-                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" href="#" style="color: #fff;">More</a>
-                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://tally.so/r/nW2DrP" target="_blank">Contact</a><a class="dropdown-item" href="privacy.html">Privacy</a></div>
+                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" href="#" style="color: #000;">More</a>
+                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://tally.so/r/nW2DrP" target="_blank">Contact</a><a class="dropdown-item" href="privacy-wdm.html">Privacy</a></div>
                     </li>
                 </ul>
             </div>
@@ -65,18 +70,18 @@
                 <div class="col" style="text-align: center;"><img src="assets/img/illustrations/undraw_connected_world_wuay.svg" style="width: 100%;"></div>
                 <div class="col text-start" style="color: var(--bs-dark);">
                     <div class="text-start d-flex flex-column py-3" style="color: var(--bs-dark);">
-                        <p>Since 2019, we have been utilizing technology to spread God's Word. We utilize privacy respecting, anonymous technologies to record our impact.</p>
+                        <p>Since 2019, we have been sharing God's Word around the world via various technologies.</p>
                     </div>
                 </div>
             </div>
             <div class="row gy-4 row-cols-2 row-cols-md-4 justify-content-center">
                 <div class="col">
                     <div class="text-center d-flex flex-column justify-content-center align-items-center py-3">
-                        <div class="bs-icon-xl bs-icon-circle d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-2 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-devices" style="color: #087F81;">
+                        <div class="bs-icon-xl bs-icon-circle d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-2 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-devices" style="color: #000;">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                <rect x="13" y="8" width="8" height="12" rx="1"></rect>
+                                <path d="M13 9a1 1 0 0 1 1 -1h6a1 1 0 0 1 1 1v10a1 1 0 0 1 -1 1h-6a1 1 0 0 1 -1 -1v-10z"></path>
                                 <path d="M18 8v-3a1 1 0 0 0 -1 -1h-13a1 1 0 0 0 -1 1v12a1 1 0 0 0 1 1h9"></path>
-                                <line x1="16" y1="9" x2="18" y2="9"></line>
+                                <path d="M16 9h2"></path>
                             </svg></div>
                         <div class="px-3" style="color: var(--bs-dark);">
                             <h2 class="fw-bold mb-0" style="color: var(--bs-dark);">156,858+</h2>
@@ -86,13 +91,13 @@
                 </div>
                 <div class="col" style="color: var(--bs-dark);">
                     <div class="text-center d-flex flex-column justify-content-center align-items-center py-3" style="color: var(--bs-dark);">
-                        <div class="bs-icon-xl bs-icon-circle d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-2 bs-icon lg" style="color: var(--bs-dark);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-map-2" style="color: #087F81;">
+                        <div class="bs-icon-xl bs-icon-circle d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-2 bs-icon lg" style="color: var(--bs-dark);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-map-2" style="color: #000;">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                <line x1="18" y1="6" x2="18" y2="6.01"></line>
-                                <path d="M18 13l-3.5 -5a4 4 0 1 1 7 0l-3.5 5"></path>
-                                <polyline points="10.5 4.75 9 4 3 7 3 20 9 17 15 20 21 17 21 15"></polyline>
-                                <line x1="9" y1="4" x2="9" y2="17"></line>
-                                <line x1="15" y1="15" x2="15" y2="20"></line>
+                                <path d="M12 18.5l-3 -1.5l-6 3v-13l6 -3l6 3l6 -3v7.5"></path>
+                                <path d="M9 4v13"></path>
+                                <path d="M15 7v5.5"></path>
+                                <path d="M21.121 20.121a3 3 0 1 0 -4.242 0c.418 .419 1.125 1.045 2.121 1.879c1.051 -.89 1.759 -1.516 2.121 -1.879z"></path>
+                                <path d="M19 18v.01"></path>
                             </svg></div>
                         <div class="px-3" style="color: var(--bs-dark);">
                             <h2 class="fw-bold mb-0" style="color: var(--bs-dark);">33</h2>
@@ -102,13 +107,13 @@
                 </div>
                 <div class="col" style="color: var(--bs-dark);">
                     <div class="text-center d-flex flex-column justify-content-center align-items-center py-3" style="color: var(--bs-dark);">
-                        <div class="bs-icon-xl bs-icon-circle d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-2 bs-icon lg" style="color: var(--bs-dark);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-git-fork" style="color: #087F81;">
+                        <div class="bs-icon-xl bs-icon-circle d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-2 bs-icon lg" style="color: var(--bs-dark);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-git-fork" style="color: #000;">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                <circle cx="12" cy="18" r="2"></circle>
-                                <circle cx="7" cy="6" r="2"></circle>
-                                <circle cx="17" cy="6" r="2"></circle>
+                                <path d="M12 18m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path>
+                                <path d="M7 6m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path>
+                                <path d="M17 6m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path>
                                 <path d="M7 8v2a2 2 0 0 0 2 2h6a2 2 0 0 0 2 -2v-2"></path>
-                                <line x1="12" y1="12" x2="12" y2="16"></line>
+                                <path d="M12 12l0 4"></path>
                             </svg></div>
                         <div class="px-3" style="color: var(--bs-dark);">
                             <h2 class="fw-bold mb-0" style="color: var(--bs-dark);">11</h2>
@@ -122,7 +127,7 @@
         <div class="container" style="margin-top: 15px;">
             <div class="row">
                 <div class="col-md-6">
-                    <p class="text-center"><img src="assets/img/illustrations/undraw_all_the_data_re_hh4w.svg" width="60%"></p>
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_data_re_80ws.svg" width="60%"></p>
                 </div>
                 <div class="col-md-6">
                     <h3>Views</h3>
@@ -146,7 +151,7 @@
         <div class="container" style="margin-top: 15px;">
             <div class="row">
                 <div class="col-md-6">
-                    <p class="text-center"><img src="assets/img/illustrations/undraw_pair_programming_re_or4x.svg" width="60%"></p>
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_programming_re_kg9v.svg" width="60%"></p>
                 </div>
                 <div class="col-md-6">
                     <h3>Open Source</h3>
@@ -154,58 +159,42 @@
                 </div>
             </div>
         </div><!-- End: 1 Row 2 Columns -->
-        <!-- Start: 1 Row 2 Columns -->
-        <div class="container" style="margin-top: 15px;">
-            <div class="row">
-                <div class="col-md-6">
-                    <p class="text-center"><img src="assets/img/illustrations/undraw_map_dark_re_36sy.svg" width="60%"></p>
-                </div>
-                <div class="col-md-6">
-                    <h3>Roadmap 2025</h3>
-                    <p>Our ministry is continuing to develop and grow, but we cannot proceed forward without a guide.</p>
-                    <p><a href="roadmap.html">Learn More</a></p>
-                </div>
-            </div>
-        </div><!-- End: 1 Row 2 Columns -->
         <div class="container h-100"></div>
     </section><!-- End: Hero Banner -->
     <!-- Start: Footer Dark -->
-    <footer class="text-center bg-dark">
+    <footer class="text-center bg-dark" style="background: #1a1a1a;">
         <div class="container text-white py-4 py-lg-5">
             <ul class="list-inline">
                 <li class="list-inline-item me-4"><a class="link-light" href="index.html">Home</a></li>
-                <li class="list-inline-item me-4"><a class="link-light" href="privacy.html">Privacy</a></li>
+                <li class="list-inline-item me-4"><a class="link-light" href="privacy-wdm.html">Privacy</a></li>
                 <li class="list-inline-item"><a class="link-light" href="https://tally.so/r/nW2DrP" target="_blank">Contact</a></li>
             </ul>
             <p class="text-center"><img src="assets/img/wave4_w.png" width="90px"></p>
             <ul class="list-inline" style="font-size: 25px;">
                 <li class="list-inline-item me-4"><a href="https://www.instagram.com/wdm_net/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-brand-instagram text-light" data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <rect x="4" y="4" width="16" height="16" rx="4"></rect>
-                            <circle cx="12" cy="12" r="3"></circle>
-                            <line x1="16.5" y1="7.5" x2="16.5" y2="7.501"></line>
+                            <path d="M4 4m0 4a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z"></path>
+                            <path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"></path>
+                            <path d="M16.5 7.5l0 .01"></path>
                         </svg></a></li>
-                <li class="list-inline-item me-4"><a href="https://twitter.com/wdm_net" target="_blank" style="color: var(--bs-body-bg);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-letter-x text-light" data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand">
+                <li class="list-inline-item me-4"><a href="https://twitter.com/wdm_net" target="_blank" style="color: var(--bs-body-bg);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-brand-x text-light" data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <line x1="7" y1="4" x2="17" y2="20"></line>
-                            <line x1="17" y1="4" x2="7" y2="20"></line>
+                            <path d="M4 4l11.733 16h4.267l-11.733 -16z"></path>
+                            <path d="M4 20l6.768 -6.768m2.46 -2.46l6.772 -6.772"></path>
                         </svg></a></li>
                 <li class="list-inline-item me-4"><a href="https://www.minds.com/wdm_net/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-bulb text-light" data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M3 12h1m8 -9v1m8 8h1m-15.4 -6.4l.7 .7m12.1 -.7l-.7 .7"></path>
                             <path d="M9 16a5 5 0 1 1 6 0a3.5 3.5 0 0 0 -1 3a2 2 0 0 1 -4 0a3.5 3.5 0 0 0 -1 -3"></path>
-                            <line x1="9.7" y1="17" x2="14.3" y2="17"></line>
+                            <path d="M9.7 17l4.6 0"></path>
                         </svg></a></li>
-                <li class="list-inline-item me-4"><a href="https://t.me/wdm_net" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-brand-telegram text-light" data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M15 10l-4 4l6 6l4 -16l-18 7l4 2l2 6l3 -4"></path>
-                        </svg></a></li>
-                <li class="list-inline-item me-4"><a href="https://gettr.com/user/wdm_net" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-letter-g text-light" data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand">
+                <li class="list-inline-item"><a href="https://gettr.com/user/wdm_net" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-letter-g text-light" data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M18 9a5 5 0 0 0 -5 -5h-2a5 5 0 0 0 -5 5v6a5 5 0 0 0 5 5h2a5 5 0 0 0 5 -5v-2h-4"></path>
                         </svg></a></li>
             </ul>
-            <p class="text-muted mb-0">Copyright © 2023 Jacob Borg</p>
+            <p><a href="https://ecoborg.net" target="_blank"><img src="assets/img/poweredby_light.svg" width="200px"></a></p>
+            <p class="text-white mb-0">Copyright © 2023 Jacob Borg</p>
         </div>
     </footer><!-- End: Footer Dark -->
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
