--- a/roadmap.html
+++ b/roadmap.html
@@ -28,19 +28,19 @@
 
 <body style="font-family: Quicksand, sans-serif;" onload="disableselect()">
     <!-- Start: Navbar Right Links (Dark) -->
-    <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" style="background: #DBF226;">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_b.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5" style="border-color: #000;color: #000;"><span class="visually-hidden">Toggle navigation</span><span><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-menu">
+    <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" style="background: #273043;">
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5" style="border-color: #000;color: #000;"><span class="visually-hidden">Toggle navigation</span><span><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-menu">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path d="M4 8l16 0"></path>
                         <path d="M4 16l16 0"></path>
                     </svg></span></button>
             <div class="collapse navbar-collapse text-end" id="navcol-5" style="font-size: 18px;">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" data-bss-hover-animate="pulse" href="index.html" style="color: #000;">Home</a></li>
-                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" href="#" style="color: #000;">Projects</a>
+                    <li class="nav-item"><a class="nav-link link-light" data-bss-hover-animate="pulse" href="index.html" style="color: #000;">Home</a></li>
+                    <li class="nav-item dropdown"><a class="nav-link link-light" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" href="#" style="color: #000;">Projects</a>
                         <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="https://courses.wavedm.net" target="_blank">Courses</a><a class="dropdown-item" href="ministryconnect.html">MinistryConnect</a><a class="dropdown-item" href="https://act.wavedm.net" target="_blank">Act</a><a class="dropdown-item" href="webdesign.html">Web Design</a></div>
                     </li>
-                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" href="#" style="color: #000;">More</a>
+                    <li class="nav-item dropdown"><a class="nav-link link-light" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" href="#" style="color: #000;">More</a>
                         <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://tally.so/r/nW2DrP" target="_blank">Contact</a><a class="dropdown-item" href="privacy-wdm.html">Privacy</a></div>
                     </li>
                 </ul>
@@ -50,7 +50,7 @@
     <!-- Start: Hero Parallax -->
     <section>
         <!-- Start: Parallax Background -->
-        <div style="height: 600px;background: url(&quot;assets/img/wave_bw.jpg&quot;) top / cover;">
+        <div data-bss-parallax-bg="true" style="height: 600px;background: url(&quot;assets/img/ivan-bandura-Z1jyU-1ixXE-unsplash.jpg&quot;) top / cover;background-image: url(&quot;assets/img/ivan-bandura-Z1jyU-1ixXE-unsplash.jpg&quot;);background-position: center;background-size: cover;">
             <div class="container h-100">
                 <div class="row h-100">
                     <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center" style="color: #fff;">
@@ -87,7 +87,7 @@
         <div class="container" style="margin-top: 15px;">
             <div class="row">
                 <div class="col-md-6">
-                    <p class="text-center"><img src="assets/img/illustrations/undraw_server_cluster_jwwq(1).svg" width="50%"></p>
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_server_cluster_jwwq.svg" width="50%"></p>
                 </div>
                 <div class="col-md-6">
                     <h3>Independently Hosted</h3>
@@ -122,7 +122,7 @@
         <div class="container h-100"></div>
     </section><!-- End: Hero Banner -->
     <!-- Start: Footer Dark -->
-    <footer class="text-center bg-dark" style="background: #1a1a1a;">
+    <footer class="text-center bg-dark" style="background: #273043;">
         <div class="container text-white py-4 py-lg-5">
             <ul class="list-inline">
                 <li class="list-inline-item me-4"><a class="link-light" href="index.html">Home</a></li>
