--- a/impact.html
+++ b/impact.html
@@ -50,12 +50,12 @@
     <!-- Start: Hero Parallax -->
     <section>
         <!-- Start: Parallax Background -->
-        <div data-bss-parallax-bg="true" style="height: 600px;background: url(&quot;assets/img/earth.jpg&quot;) top / cover;background-image: url(&quot;assets/img/vicko-mozara-m82uh_vamhg-unsplash.jpg&quot;);background-position: center;background-size: cover;">
+        <div data-bss-parallax-bg="true" style="height: 600px;background: url(&quot;assets/img/earth.jpg&quot;) top / cover;background-image: url(&quot;assets/img/rowan-heuvel-U6t80TWJ1DM-unsplash.jpg&quot;);background-position: center;background-size: cover;">
             <div class="container h-100">
                 <div class="row h-100">
                     <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center" style="color: #fff;">
                         <div style="max-width: 350px;">
-                            <h1 class="text-uppercase fw-bold text-dark" style="font-family: Quicksand, sans-serif;"><strong><span style="color: inherit;">Our impact</span></strong></h1>
+                            <h1 class="text-uppercase fw-bold" style="font-family: Quicksand, sans-serif;"><strong><span style="color: inherit;">Our impact</span></strong></h1>
                         </div>
                     </div>
                 </div>
