--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
 
 <body style="font-family: Quicksand, sans-serif;" onload="disableselect()">
     <!-- Start: Navbar Right Links (Dark) -->
-    <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" style="background: #273043;">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5" style="border-color: #000;color: #000;"><span class="visually-hidden">Toggle navigation</span><span><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-menu">
+    <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" style="background: #1a1a1a;">
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler text-white" data-bs-target="#navcol-5" style="color: #000;border-color: #ffffff;"><span class="visually-hidden">Toggle navigation</span><span><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-menu">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path d="M4 8l16 0"></path>
                         <path d="M4 16l16 0"></path>
@@ -38,7 +38,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link link-light" data-bss-hover-animate="pulse" href="index.html" style="color: #000;">Home</a></li>
                     <li class="nav-item dropdown"><a class="nav-link link-light" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" href="#" style="color: #000;">Projects</a>
-                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="https://courses.wavedm.net" target="_blank">Courses</a><a class="dropdown-item" href="ministryconnect.html">MinistryConnect</a><a class="dropdown-item" href="https://act.wavedm.net" target="_blank">Act</a><a class="dropdown-item" href="webdesign.html">Web Design</a></div>
+                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="https://courses.wavedm.net" target="_blank">Courses</a><a class="dropdown-item" href="ministryconnect.html">MinistryConnect</a><a class="dropdown-item" href="https://act.wavedm.net" target="_blank">Act</a><a class="dropdown-item" href="conservation.html">Conservation</a></div>
                     </li>
                     <li class="nav-item dropdown"><a class="nav-link link-light" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" href="#" style="color: #000;">More</a>
                         <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://tally.so/r/nW2DrP" target="_blank">Contact</a><a class="dropdown-item" href="privacy-wdm.html">Privacy</a></div>
@@ -50,7 +50,7 @@
     <!-- Start: Hero Parallax -->
     <section>
         <!-- Start: Parallax Background -->
-        <div data-bss-parallax-bg="true" style="height: 600px;background: url(&quot;assets/img/ivan-bandura-Z1jyU-1ixXE-unsplash.jpg&quot;) top / cover;background-image: url(&quot;assets/img/ivan-bandura-Z1jyU-1ixXE-unsplash.jpg&quot;);background-position: center;background-size: cover;">
+        <div data-bss-parallax-bg="true" style="height: 600px;background: url(&quot;assets/img/wave_vintage.png&quot;) center / cover;">
             <div class="container h-100">
                 <div class="row h-100">
                     <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center" style="color: #fff;">
