--- a/ministryconnect.html
+++ b/ministryconnect.html
@@ -28,8 +28,8 @@
 
 <body style="font-family: Quicksand, sans-serif;" onload="disableselect()">
     <!-- Start: Navbar Right Links (Dark) -->
-    <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" style="background: #273043;">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5" style="border-color: #000;color: #000;"><span class="visually-hidden">Toggle navigation</span><span><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-menu">
+    <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" style="background: #1a1a1a;">
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler text-white" data-bs-target="#navcol-5" style="color: #000;border-color: #ffffff;"><span class="visually-hidden">Toggle navigation</span><span><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-menu">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path d="M4 8l16 0"></path>
                         <path d="M4 16l16 0"></path>
@@ -38,7 +38,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link link-light" data-bss-hover-animate="pulse" href="index.html" style="color: #000;">Home</a></li>
                     <li class="nav-item dropdown"><a class="nav-link link-light" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" href="#" style="color: #000;">Projects</a>
-                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="https://courses.wavedm.net" target="_blank">Courses</a><a class="dropdown-item" href="ministryconnect.html">MinistryConnect</a><a class="dropdown-item" href="https://act.wavedm.net" target="_blank">Act</a><a class="dropdown-item" href="webdesign.html">Web Design</a></div>
+                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="https://courses.wavedm.net" target="_blank">Courses</a><a class="dropdown-item" href="ministryconnect.html">MinistryConnect</a><a class="dropdown-item" href="https://act.wavedm.net" target="_blank">Act</a><a class="dropdown-item" href="conservation.html">Conservation</a></div>
                     </li>
                     <li class="nav-item dropdown"><a class="nav-link link-light" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" href="#" style="color: #000;">More</a>
                         <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://tally.so/r/nW2DrP" target="_blank">Contact</a><a class="dropdown-item" href="privacy-wdm.html">Privacy</a></div>
@@ -51,7 +51,7 @@
     <div class="container py-4 py-xl-5">
         <div class="row gy-4 gy-md-0">
             <div class="col-md-6">
-                <div class="p-xl-5 m-xl-5"><img class="rounded img-fluid w-100 fit-cover" style="min-height: 300px;" src="assets/img/illustrations/undraw_map_dark_re_36sy.svg" width="100%"></div>
+                <div class="p-xl-5 m-xl-5"><img class="rounded img-fluid w-100 fit-cover" style="min-height: 300px;" src="assets/img/illustrations/undraw_adventure_re_ncqp%20(1).svg" width="100%"></div>
             </div>
             <div class="col-md-6 d-md-flex align-items-md-center">
                 <div style="max-width: 350px;">
@@ -62,7 +62,7 @@
         </div>
     </div><!-- End: Hero Clean -->
     <div class="container" style="padding-bottom: 12px;"><div>
-    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search...">
+    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search by location...">
 
 <ul id="myUL">
   <li><a rel="noreferrer nofollow external" target="_blank" href="https://rollinonfaith.square.site/">
@@ -71,7 +71,7 @@
     </li>
 
     <li><a rel="noreferrer nofollow external" target="_blank" href="https://www.citychurch-ag.com/">
-        <p class="h3">City Church - Lancaster CA</p> <p style="visibility: visible;" class="h6">Our purpose at City Church is… “To Love God and Make a Difference.” We filter every idea, program and budget request through our purpose statement. If what we plan doesn’t help us meet our purpose, then we don’t do it. Our statement of purpose is built on two teachings of Jesus.</p>
+        <p class="h3">City Church - Lancaster CA</p> <p style="visibility: visible;" class="h6">Our purpose at City Church is… “To Love God and Make a Difference.” We filter every idea, program and budget request through our purpose statement. If what we plan doesn’t help us meet our purpose, then we don’t do it. Our statement of purpose is built on two teachings of Jesus. <span style="visibility: hidden;">Lancaster Palmdale Mojave California United States</span></p>
         </a>
         </li>
 
@@ -93,6 +93,38 @@
                       <p class="h3">Open English Bible</p> <p style="visibility: visible;" class="h6">We are committed to creating a completely free modern English translation of the Bible. The OEB is under a Creative Commons Zero licence - that is, it is in the public domain.</p>
                       </a>
                       </li>
+                      <li><a rel="noreferrer nofollow external" target="_blank" href="https://www.christaz.org">
+                        <p class="h3">Christ Church AZ</p> <p style="visibility: visible;" class="h6">One church. One mission. Multiple congregations. <span style="visibility: hidden;">Arizona, United States</span> </p>
+                        </a>
+                        </li>
+                        <li><a rel="noreferrer nofollow external" target="_blank" href="https://www.christaz.org/centralphx">
+                          <p class="h3">Christ Church AZ - Central Phoenix</p> <p style="visibility: visible;" class="h6">One church. One mission. Multiple congregations. <span style="visibility: hidden;">Arizona United States</span> </p>
+                          </a>
+                          </li>
+                          <li><a rel="noreferrer nofollow external" target="_blank" href="https://www.christaz.org/gilbert">
+                            <p class="h3">Christ Church AZ - Gilbert</p> <p style="visibility: visible;" class="h6">One church. One mission. Multiple congregations. <span style="visibility: hidden;">Arizona United States</span> </p>
+                            </a>
+                            </li>
+                            <li><a rel="noreferrer nofollow external" target="_blank" href="https://www.christaz.org/peoria">
+                              <p class="h3">Christ Church AZ - Peoria</p> <p style="visibility: visible;" class="h6">One church. One mission. Multiple congregations. <span style="visibility: hidden;">Arizona United States</span> </p>
+                              </a>
+                              </li>
+                              <li><a rel="noreferrer nofollow external" target="_blank" href="https://www.christaz.org/compassioncenter">
+                                <p class="h3">City Hope</p> <p style="visibility: visible;" class="h6">City Hope exists to provide help and hope in Jesus’ name. We take Jesus’ command to love your neighbor seriously. That’s why we provide our guests free food, hygiene products, clothing, and connect them to helpful programs and services. <span style="visibility: hidden;">Phoenix Chandler Arizona United States</span> </p>
+                                </a>
+                                </li>
+                                <li><a rel="noreferrer nofollow external" target="_blank" href="https://www.fixatephx.com">
+                                  <p class="h3">Fixate</p> <p style="visibility: visible;" class="h6">restoring the gaze of humanity back to it’s Creator <span style="visibility: hidden;">church Phoenix Arizona United States</span> </p>
+                                  </a>
+                                  </li>
+                                  <li><a rel="noreferrer nofollow external" target="_blank" href="https://doxasd.org">
+                                    <p class="h3">Doxa Church</p> <p style="visibility: visible;" class="h6">HISTORIC FAITH. MODERN CONTEXT. <span style="visibility: hidden;">San Diego California United States</span> </p>
+                                    </a>
+                                    </li>
+                                    <li><a rel="noreferrer nofollow external" target="_blank" href="https://cityviewsd.com">
+                                      <p class="h3">City View Church</p> <p style="visibility: visible;" class="h6">Whether you're new to the area, looking for a church home, or just exploring your faith, we invite you to join us as we seek to grow in our relationships with God and with one another. <span style="visibility: hidden;">San Diego California United States</span> </p>
+                                      </a>
+                                      </li>
 </ul>
 </div>
 
