--- a/conservation.html
+++ b/conservation.html
@@ -50,19 +50,71 @@
     <!-- Start: Hero Parallax -->
     <section>
         <!-- Start: Parallax Background -->
-        <div style="height: 600px;">
+        <div data-bss-parallax-bg="true" style="height: 600px;background: url(&quot;assets/img/watering.png&quot;) center;">
             <div class="container h-100">
-                <div class="row d-md-flex justify-content-md-center h-100">
-                    <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center" style="color: rgb(0,0,0);">
-                        <div style="max-width: 350px;"><img src="assets/img/illustrations/undraw_server_down_s-4-lk.svg" style="width: 70%;">
-                            <h1 class="text-uppercase fw-bold" style="color: #000000;">Hmm...</h1>
-                            <h4 class="text-uppercase fw-bold" style="color: #000000;">We can't find that page.</h4>
+                <div class="row h-100">
+                    <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center" style="color: #fff;">
+                        <div style="max-width: 350px;">
+                            <h1 class="text-uppercase fw-bold text-white" style="font-family: Quicksand, sans-serif;"><strong><span style="color: inherit;">Conservation</span></strong></h1>
                         </div>
                     </div>
                 </div>
             </div>
         </div><!-- End: Parallax Background -->
     </section><!-- End: Hero Parallax -->
+    <!-- Start: Hero Banner -->
+    <section class="py-4 py-xl-5">
+        <div class="container h-100">
+            <div class="row h-100">
+                <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-center align-items-md-center justify-content-xl-center">
+                    <div>
+                        <h2 class="fw-bold mb-3">Our Mission</h2>
+                        <p class="mb-4">Our mission is to share the Gospel while tending to His Creation.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section><!-- End: Hero Banner -->
+    <!-- Start: Hero Banner -->
+    <section class="py-4 py-xl-5">
+        <!-- Start: 1 Row 2 Columns -->
+        <div class="container" style="margin-top: 15px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_nature_m5ll.svg" width="60%"></p>
+                </div>
+                <div class="col-md-6">
+                    <h3>The Task</h3>
+                    <p>Our goal is to conserve and protect God's Creation while promoting Christian fellowship and community.</p>
+                </div>
+            </div>
+        </div><!-- End: 1 Row 2 Columns -->
+        <!-- Start: 1 Row 2 Columns -->
+        <div class="container" style="margin-top: 15px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_into_the_night_vumi.svg" width="60%"></p>
+                </div>
+                <div class="col-md-6">
+                    <h3>Leave It Cleaner</h3>
+                    <p>The first step to conservation is handling one's own footprint. That's why we are encouraging others to leave it cleaner than when they got there. This applies to camp grounds, trails, and even one's workplace.</p>
+                </div>
+            </div>
+        </div><!-- End: 1 Row 2 Columns -->
+        <!-- Start: 1 Row 2 Columns -->
+        <div class="container" style="margin-top: 15px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_nature_on_screen_xkli.svg" width="60%"></p>
+                </div>
+                <div class="col-md-6">
+                    <h3>Greener Technology</h3>
+                    <p>We are utilizing eco-friendly technology wherever possible and we are encouraging other to do the same.</p>
+                </div>
+            </div>
+        </div><!-- End: 1 Row 2 Columns -->
+        <div class="container h-100"></div>
+    </section><!-- End: Hero Banner -->
     <!-- Start: Footer Dark -->
     <footer class="text-center bg-dark" style="background: #273043;">
         <div class="container text-white py-4 py-lg-5">
